fixed a liquid for loop bug

--- a/resources/newsletters/index.html
+++ b/resources/newsletters/index.html
@@ -87,6 +87,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
      <li><a href="http://www.chatbotsweekly.com/">Chat Bots Weekly</a></li>
 
+     <li><a href="http://www.mindtheproduct.com/product-management-newsletter/">Mind The Product</a></li>
+
+     <li><a href="http://us6.campaign-archive2.com/?u=b98e2de85f03865f1d38de74f&amp;id=1dca929cc7&amp;e=578548f140">Benedict's Newsletter</a></li>
+
 </ul>
 
 
